Optimised imports, styled datepicker and statistics page. Added total amount to statistics page.